syntax = "proto3";

package base;

option csharp_namespace = "HookKeylogger.Base";

message KeyPress {
  int32 key = 1; // Keypress keycode. See the Keys enum for values.
  string active_program = 2; // String of the active window at the time of this keypress.
  int64  timestamp = 3; // Unix timestamp milliseconds. (UTC)
}

message KeyPressSet{
  repeated KeyPress keys = 1;
}

// Empty response message
message PutKeyPressResponse {

}

service KerPressAggergator {
	//Interactions between the proxy client library and the running proxy process
	rpc PutKeyPress(KeyPress) returns  (PutKeyPressResponse) {}
}
